<resources>
    <string name="app_name">exam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="add_a_vechicle">Add a Vechicle</string>
    <string name="this_information_will_help_us_provide_the_most_relevant_data">This information will help us provide the most relevant data</string>
    <string name="add">Add +</string>
    <string name="skip">Skip</string>
</resources>